2005-04-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* GenericFilter.py: Don't crash on corrupt database

2005-04-19  Eero Tamminen  <eerot@sf>
	* src/GenericFilter.py: Fix typo
	* src/ReportUtils.py: Fix typos
	* src/gramps.glade: Fix typo

2005-04-18  Guillaume Pratte <guillaumep@soireevideo.org>
	* src/po/fr.po: Translation updated, but not finished.

2005-04-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/WebPage.py (dump_gendex): Files are named by GRAMPS ID;
	Alway print fields for birth/death; Fixed typo in DateHandler

2005-04-14  Don Allingham  <don@gramps-project.org>
	* src/plugins/Check.py: loop through family relationships until all
	problems are resolved
	* src/FamilyView.py: make load_family more robust to signals

2005-04-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py (undo): Dont emit "database-changed"
	* src/plugins/plugins/TestcaseGenerator.py: Added option to generate
	a new transaction for every change on the database. Useful for UNDO
	and signal testing.
	
2005-04-13  Don Allingham  <don@gramps-project.org>
	* src/EditSource.py: allow double click on reference to bring up the referece
	editor
	* src/EventEdit.py: don't require a callback
	* src/ImageSelect.py: horrible hack for handling removing parent windows.
	Alex: HELP!
	* src/gramps_main.py: check for reentrancy into the undo handler
	* src/plugins/WebPage.py: fixed check on dialog run() return value,
	changed deprecated gtk.mainiteration to gtk.main_iteration
	* src/WriteGedcom.py: fixed problem with skipping events

2005-04-12  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: commit family before people when committing
	new spouse.
	* src/EventEdit.py: more robust handler for new place after an edit

2005-04-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ArgHandler.py: Fixed typo

2005-04-11  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py: hook up to 'database-changed' signal