@@ -170,8 +170,8 @@ class RelationshipCalculator:
         pmap[person.get_handle()] = rel_str
 
         family_handle = person.get_main_parents_family_handle()
-        if family_handle != None:
-            family = self.db.get_family_from_handle(family_handle)
+        family = self.db.get_family_from_handle(family_handle)
+        if family_handle != None and family:
             father = self.db.get_person_from_handle(family.get_father_handle())
             mother = self.db.get_person_from_handle(family.get_mother_handle())
             self.apply_filter(father,rel_str+'f',plist,pmap)
